--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <center>
         Hello
+        </center>
     </body>     
