displayed with a table

--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        Hello
+        <table width="100%" height="100%">
+            <tr>
+                <td align="center">
+                    Hello
+                </td>
+            </tr>
+        </table>
     </body>     
