styled  but hidden

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
         <title>Align Demo</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href=".style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        Hello
+        <div id="container">
+            <div id="header">Header</div>
+            <div id="left">left</div>
+            <div id="center">center</div>
+            <div id="right">right</div>
+            <div id="footer">footer</div>
+        </div>    
     </body>     
